--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
  },
  "devDependencies": {
   "@types/history": "4.7.3",
+  "@types/node": "14.6.2",
   "@types/react": "16.9.2",
   "@types/react-dom": "16.9.0",
+  "@types/react-input-mask": "2.0.0",
   "@types/react-redux": "4.4.38",
   "@types/react-router": "5.0.3",
   "@types/redux-actions": "2.3.1",
@@ -22,7 +24,7 @@
   "@types/superagent": "3.8.6",
   "@types/webpack": "3.8.17",
   "@types/webpack-env": "1.14.0",
-  "@types/node": "14.6.2",
+  "@types/google-libphonenumber": "^7.4.19",
   "autoprefixer": "9.6.1",
   "babel-cli": "6.26.0",
   "babel-core": "6.26.3",
@@ -38,12 +40,15 @@
   "extract-text-webpack-plugin": "3.0.2",
   "file-loader": "2.0.0",
   "html-webpack-plugin": "3.2.0",
+  "moment-timezone": "^0.5.34",
   "node-libs-browser": "2.2.1",
   "node-sass": "4.14.1",
   "postcss-loader": "^3.0.0",
   "react": "16.9.0",
   "react-dom": "16.9.0",
   "react-hot-loader": "4.12.11",
+  "react-input-mask": "2.0.4",
+  "react-moment": "^0.6.9",
   "react-redux": "5.1.1",
   "react-router": "5.0.1",
   "react-router-bootstrap": "0.25.0",
@@ -58,16 +63,15 @@
   "sass-loader": "7.1.0",
   "scroll-behavior": "0.9.10",
   "style-loader": "1.0.0",
+  "superagent": "2.3.0",
+  "superagent-promise": "1.1.0",
   "ts-loader": "3.5.0",
+  "ts-node": "^8.0.2",
   "tslint": "5.18.0",
   "tslint-loader": "3.5.4",
   "typescript": "^2.9.1",
-  "ts-node": "^8.0.2",
   "webpack": "3.12.0",
   "webpack-dev-server": "2.11.3",
-  "moment-timezone": "^0.5.14",
-  "react-moment": "^0.6.5",
-  "superagent": "2.3.0",
-  "superagent-promise": "1.1.0"
+  "google-libphonenumber": "^3.2.13"
  }
 }
